# django-template

./: .env.example  .gitignore  docker-compose.local.yml  docker-compose.prod.yml  pyproject.toml
apps/user/: managers.py  models.py
apps/user/migrations/: 0001_initial.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  local.py  prod.py
docker/: Dockerfile
